[tool.poetry]
name = "rag-assistant"
version = "0.1.0"
description = "Self-corrective RAG Documentation Assistant using LangGraph and FastAPI"
authors = ["Tushar"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.2.0"
langchain-groq = ">=0.1.0"
langchain-community = ">=0.2.0"
langgraph = ">=0.2.0"
chromadb = ">=0.5.0"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
markdownify = ">=0.12.0"
python-multipart = ">=0.0.9"
langchain-text-splitters = ">=0.2.0"
tavily-python = ">=0.3.0"
tavily = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
httpx = ">=0.27.0"
ruff = ">=0.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
